tests/programs/casting_tests.re
assert_eq("2", string(2)),
assert_eq("2", string("2")),
assert_eq(2, int("2")),
assert_eq(2, int(string(2))),
assert_eq(true, bool(1)),
assert_eq(string(int(bool(int("2")))), "1"),
assert_eq(bool(2), true),
assert_eq(bool(-1), true),
assert_eq(bool(null), false),
__builtin_print_catch(bool("true")),
__builtin_print_catch(bool("false")),
__builtin_print_catch(bool("")),
__builtin_print_catch(int("a")),
assert_eq(string(true), "true"),
=(x, 2),
assert_eq(string(x), "2"),
# TODO: extend this drastically
